@@ -1,20 +1,90 @@
-# Air_Hockey_With_Java
+# Air Hockey Game
+
+The Air Hockey Game is a simple implementation of the classic air hockey game using JavaFX. It allows two players to compete against each other in a virtual air hockey match.
+
+## Features
+
+<ul>
+<li>Two-player mode: Play against a friend on the same computer.
+<li>Player movement: Control the player using the arrow keys (Player 1) or W, A, S, D keys (Player 2).
+<li>Scoring system: Keep track of each player's score.
+<li>Visual effects: Player hits are highlighted with a bloom effect.
+</ul>
+
+## Requirements
+
+<ul>
+<li>Java Development Kit (JDK) 20 or higher
+<li>JavaFX library
+</ul>
+
+## How to Run
+
+<ol>
+
+<li>Make sure you have Java and JavaFX installed on your system.
+<li>Compile the source code using the following command:
+
+```css
+javac --module-path <path_to_javafx_lib> --add-modules javafx.controls,javafx.fxml Main.java
+```
+
+Replace <path_to_javafx_lib> with the path to your JavaFX library.
+
+<li>Run the compiled program using the following command:
+
+```css
+java --module-path <path_to_javafx_lib> --add-modules javafx.controls,javafx.fxml Main
+```
+
+Again, replace <path_to_javafx_lib> with the path to your JavaFX library.
+
+</ol>
+
+## How to Play
+
+<ol>
+<li>Launch the game.
+<li>Player 1 controls:
+<ul>
+<li>Move up: Up arrow key
+<li>Move down: Down arrow key
+<li>Move left: Left arrow key
+<li>Move right: Right arrow key
+<li>Hold Shift while moving to increase speed
+</ul>
+
+<li>Player 2 controls:
+<ul>
+<li>Move up: W key
+<li>Move down: S key
+<li>Move left: A key
+<li>Move right: D key
+<li>Hold Control while moving to increase speed
+</ul>
+
+<li>The objective of the game is to score goals by hitting the puck into the opponent's goal.
+<li>The game ends when a player reaches a specific score or a time limit is reached.
+</ol>
+
+## Credits
+
+The Air Hockey Game was developed by:
+
+<ul>
+<li> Ahmed El Zaki 
+<li> Ahmed Gad 
+<li> Akram Hesam Ahmed
+<li> Abd Elmeged  
+<li> Ahmed Ebrahim 
+</ul>
+
+as a project for the Object-Oriented Programming course at the Zagazig University.
 
 ### imgs from the game
 
 ![image](https://github.com/ahmedelzaky/Air_Hockey_With_Java/assets/89663624/a7d3f172-7d0f-4f54-9695-d89eaf5bef85)
 
-
-
 ![image](https://github.com/ahmedelzaky/Air_Hockey_With_Java/assets/89663624/6f42fd5a-bd5e-445f-bc66-cbd3e74e4634)
 
-
 ![image](https://github.com/ahmedelzaky/Air_Hockey_With_Java/assets/89663624/fb2951cf-314f-4c76-abce-3b943cdc8339)
-
-
-### How to play 
-
-p1 moves with W,A,S,D <br>
-p2 moves with ↑,↓,→,←
-
-have fun 😘
